tests/parse-errors/issue034-2.zir
fun comp f(a : int, b : int) {
  return a;
}

let comp main = read[int] >>> f(1, 2, 3) >>> write[int]
